# yamori

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
docs/: CONFIG_FORMAT.md  README_full.md  screenshot.md
examples/: examples_tests.toml  examples_tests.yaml
examples/even_counter/: Cargo.toml
examples/even_counter/src/: main.rs
examples/max_finder/: Cargo.toml
examples/max_finder/src/: main.rs
examples/monotonic_check/: Cargo.toml
examples/monotonic_check/src/: main.rs
scripts/: release.sh  run_tests.sh  run_tests_debug.sh  run_tests_release.sh
src/: app.rs  cli.rs  lib.rs  main.rs  test.rs  ui.rs
tests/configs/: README.md  tests.toml  tests.yaml
