[package]
name = "yamori"
version = "0.1.0"
edition = "2021"
authors = ["nwiizo <nwiizo@gmail.com>"]
description = "A test runner and visualizer for command-line applications"
repository = "https://github.com/nwiizo/yamori"
license = "MIT"
readme = "README.md"
keywords = ["testing", "tui", "cli", "visualization"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]

[dependencies.anyhow]
version = "^1.0.0"

[dependencies.similar]
version = "^2.7.0"

[dependencies.clap]
version = "^4.5.0"
features = ["derive"]

[dependencies.crossterm]
version = "^0.28.0"

[dependencies.ratatui]
version = "^0.29.0"

[dependencies.serde]
version = "^1.0.0"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.9"

[dependencies.toml]
version = "0.8"

[dependencies.chrono]
version = "0.4"
