[package]
name = "yamori"
version = "0.1.0"
edition = "2021"
authors = ["nwiizo <nwiizo@gmail.com>"]
description = "A test runner and visualizer for command-line applications"
repository = "https://github.com/nwiizo/yamori"
license = "MIT"
readme = "README.md"
keywords = ["testing", "tui", "cli", "visualization"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
anyhow = "1.0.79"
similar = "2.7.0"
clap = { version = "4.5.0", features = ["derive"] }
crossterm = "0.28.0"
ratatui = "0.29.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
toml = "0.8.10"
chrono = "0.4.34"
